:art: 优化文件加载和分析逻辑，增加重复文件检测提示